Thu Mar 25 21:04:54 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* credits.sh, gtkgame.c, show.c, credits.c, credits.h:
	Move generation of cred entries into credits.sh for easy
	reuse in the text version of CommandShowCredits.

Wed Mar 24 12:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: More credits and version info now copyable.

Tue Mar 23 12:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boards.xml, textures.txt: Added settings for final few 3d designs,
		tidied up design a bit too.

Mon Mar 22 12:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Make sure messages shown when docked panels are
	hidden, also don't show a message when setting cube (bug 3973)

Fri Mar 19 12:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Change window order and titles, and put back
		accelerators from windows (Ned's suggestions)

Fri Mar 19 00:26:45 2004 Oystein Johansen  <oystein@gnubg.org>

	* external.c (and other files): changes to use winsock2.h

Thu Mar 18 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Panel bug fixed (removed warning)

Mon Mar 16 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Panel bug fixed (crash at startup)

Mon Mar 15 17:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* sound.c: Wait when multiple sounds attempted to be played (windows)

Mon Mar 15 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c gtkgame.c: Reorganized about box

Mon Mar 15 07:49:53 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PythonInitialise): fix bug for szDir==NULL
	(reported by Joseph Heled)

Sun Mar 14 08:55:39 2004  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkcolour.h: Change broken type for GtkColourPicker::func and
	prototype.

Fri Mar 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkprefs.c, gtkgame.c: Removed texture load errors when in 2d mode
