@@ -27,8 +27,9 @@
 
              Contributors (of bug reports and suggestions) include:
 
-    Elias Kritikos          Robert Eberlein         Tim Laursen
-    Misja Alma              Fotis                   Eli Liang
+    Elias Kritikos          Peter Eberhard          Corrin Lakeland
+    Misja Alma              Robert Eberlein         Tim Laursen
+    Christian Anthon        Fotis                   Eli Liang
     Kazuaki Asai            Kennedy Fraser          Ege Lundgren
     Eric Augustine          Ric Gerace              Kevin Maguire
     Erik Barfoed            Michel Grimminck        Massimiliano Maini
@@ -50,7 +51,6 @@
     Michael Depreli         Gerhard Knop            Mike Petch
     Ian Dunstan             Robert Konigsberg       Zvezdan Petkovic
     Max Durbano             Martin Krainer          Nardy Pillards
-    Peter Eberhard          Corrin Lakeland
 
 
   Credit is also due to those who have published information about backgammon
